2012-02-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* gentpl.py: Remove obsolete pkglib_DATA handling.

2012-02-25  Vladimir Serbinenko  <phcoder@gmail.com>

	Don't transform PACKAGE_TARNAME following a discussion on autoconf
	mailing list.

	* util/grub-install.in: Don't transform PACKAGE_TARNAME.
	* util/grub-kbdcomp.in: Likewise.
	* util/grub-mkconfig.in: Likewise.
	* util/grub-mkconfig_lib.in: Likewise.
	* util/grub-mknetdir.in: Likewise.
	* util/grub-mkrescue.in: Likewise.
	* util/grub-mkstandalone.in: Likewise.
	* util/grub-reboot.in: Likewise.
	* util/grub-set-default.in: Likewise.
	* util/powerpc/ieee1275/grub-mkrescue.in: Likewise.

2012-02-25  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove GRUB_PREFIX.

	* util/grub-mkconfig.in: Remove GRUB_PREFIX.
	* util/grub.d/00_header.in: Compute prefix in the only place it's still
	used for backward compatibility.

2012-02-25  Vladimir Serbinenko  <phcoder@gmail.com>

	Add new all_video module.

	* grub-core/Makefile.am (moddep.lst): Make dependent on video.lst.
	* grub-core/Makefile.core.def (all_video): New module.
	* grub-core/genmoddep.awk: Generate dependency of all_video from
	video.lst.
	* grub-core/lib/fake_module.c: New file.
	* grub-core/normal/main.c (features): Add feature_all_video_module.
	* util/grub.d/00_header.in: Define locale_dir based on $prefix and
	don't do explicit search again.
	insmod all_video in load_video if available.

2012-02-25  Vladimir Serbinenko  <phcoder@gmail.com>

	Another round of string clarification and adding TRANSLATORS comments.

2012-02-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mknetdir.in: Remove erroneous reference to install_device.

2012-02-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/charset.c (grub_utf8_to_ucs4_alloc): Fix return type
	to grub_ssize_t.
	* grub-core/normal/main.c (grub_normal_init_page): Fix msg_len type.
	* include/grub/charset.h (grub_utf8_to_ucs4_alloc): Fix prototype.
